roles/k8s_apps/files/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digitafrica
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
