roles/k8s_apps/files/31-cadvisor.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      hostNetwork: true
      containers:
        - name: cadvisor
          image: gcr.io/cadvisor/cadvisor:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: varrun
              mountPath: /var/run
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker
              readOnly: true
      volumes:
        - name: rootfs
          hostPath: { path: / }
        - name: varrun
          hostPath: { path: /var/run }
        - name: sys
          hostPath: { path: /sys }
        - name: docker
          hostPath: { path: /var/lib/docker }
